--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a class="nav-link text-white" href="#">Conviértete en orador</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Comprar tickets</a>
+                <a class="nav-link text-white" href="pages/compraTikets.html">Comprar tickets</a>
               </li>
             </ul>
           </div>
